Corrected image background for contrast changes

--- a/src/documents/css/contrast.css.styl
+++ b/src/documents/css/contrast.css.styl
@@ -14,7 +14,6 @@ build-themes-extensions(contrastThemes) {
                     box-shadow: none;
                 }
                 .fluid-web-showcase-item {
-                    background: none !important;
                     border: 1px solid fColor;
                 }
                 a:hover,
